--- a/index.html
+++ b/index.html
@@ -25,5 +25,59 @@
       </div>
     </div>
   </header>
+
+  <div class="banner">
+    <h1>Twitter da Intellecti</h1>
+  </div>
+
+  <div class="bar">
+    <div class="content">
+      <ul>
+        <li class="active">
+          <span>Tweets</span>
+          <strong>3931</strong>
+        </li>
+        <li>
+          <span>Followins</span>
+          <strong>654</strong>
+        </li>
+        <li>
+          <span>Followers</span>
+          <strong>387</strong>
+        </li>
+        <li>
+          <span>Favorites</span>
+          <strong>265</strong>
+        </li>
+      </ul>
+      <div class="actions">
+        <button>Follow</button>
+        <img src="./images/more.svg" alt="More">
+      </div>
+    </div>
+  </div>
+
+  <div class="wrapper-content">
+    <aside class="profile">
+      <img src="images/avatar.png" alt="Pedro Meneghel" />
+      <h2>Pedro Meneghel</h2>
+      <span>@pedromeneghel</span>
+      <p>Sem o que descrever no momento.</p>
+      <ul>
+        <li><img src="./images/place.svg" alt="Place" /> Botucatu, Brazil</li>
+        <li><img src="./images/url.svg" alt="URL" /> intellecti.com.br</li>
+        <li><img src="./images/joined.svg" alt="Joined" /> Joined Junho 2017</li>
+        <li><img src="./images/born.svg" alt="Brn" /> Bron the 20th of November 1986</li>
+      </ul>
+    </aside>
+    <section class="timeline">
+      timeline
+    </section>
+
+    <aside class="widgets">
+      widgets
+    </aside>
+  </div>
+
 </body> 
 </html>
